--- a/index.html
+++ b/index.html
@@ -1,64 +1,67 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>⏰ 리마인더 자동 발송 스케줄러</title>
+  <meta charset="UTF-8">
+  <title>📋 리마인더 예약 내역 관리자 모니터링</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script src="firebase-config.js"></script>
   <style>
-    body { font-family: sans-serif; background: #f0fdf4; padding: 2rem; color: #1f2937; }
-    h1 { color: #10b981; }
-    input, select {
-      display: block;
-      width: 100%;
-      max-width: 400px;
-      padding: 0.6rem;
-      margin: 1rem 0;
-    }
-    button {
-      margin-top: 1rem;
-      padding: 0.75rem 1.5rem;
-      background: #059669;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .result {
+    body { font-family: sans-serif; padding: 2rem; background: #ecfdf5; color: #1f2937; }
+    h1 { color: #0d9488; text-align: center; }
+    table {
       margin-top: 2rem;
+      width: 100%;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+      border-collapse: collapse;
       background: white;
-      padding: 1.5rem;
-      border-left: 6px solid #10b981;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    th, td {
+      padding: 0.75rem;
+      border: 1px solid #d1fae5;
+      text-align: center;
+    }
+    th {
+      background: #ccfbf1;
+    }
+    tr:nth-child(even) {
+      background: #f0fdf4;
     }
   </style>
 </head>
 <body>
-  <h1>⏰ 고객 대상 리마인더 자동 발송 예약</h1>
-  <label>고객 이메일</label>
-  <input id="email" placeholder="예: user@agrinexus.com" />
-  <label>알림 대상 기능</label>
-  <select id="feature">
-    <option value="contract">계약서 재작성</option>
-    <option value="roi">ROI 분석 다시보기</option>
-    <option value="ir">IR 보고서 제출</option>
-  </select>
-  <label>알림 예약일 (YYYY-MM-DD)</label>
-  <input id="date" type="date" />
-  <button onclick="schedule()">예약하기</button>
-
-  <div id="output" class="result" style="display:none;"></div>
+  <h1>📋 리마인더 예약 내역 대시보드</h1>
+  <table>
+    <thead>
+      <tr><th>이메일</th><th>기능</th><th>예약일</th><th>상태</th></tr>
+    </thead>
+    <tbody id="reminderTable">
+      <tr><td colspan="4">로딩 중...</td></tr>
+    </tbody>
+  </table>
 
 <script>
-  function schedule() {
-    const email = document.getElementById("email").value;
-    const feature = document.getElementById("feature").value;
-    const date = document.getElementById("date").value;
+  const db = firebase.firestore();
+  const table = document.getElementById("reminderTable");
 
-    let content = `📅 ${email} 고객님께 ${date}일에 [${feature}] 기능 관련 알림이 예약되었습니다.`;
-    document.getElementById("output").innerHTML = content;
-    document.getElementById("output").style.display = "block";
-  }
+  db.collection("reminders").orderBy("date").onSnapshot(snapshot => {
+    table.innerHTML = "";
+    snapshot.forEach(doc => {
+      const d = doc.data();
+      const row = `
+        <tr>
+          <td>${d.email}</td>
+          <td>${d.feature}</td>
+          <td>${d.date}</td>
+          <td>${new Date(d.date) < new Date() ? "✅ 완료 또는 진행 중" : "⏳ 예정"}</td>
+        </tr>`;
+      table.innerHTML += row;
+    });
+  });
 </script>
 </body>
 </html>
