--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>🔁 반복 캠페인 자동 생성기</title>
+  <meta charset="UTF-8" />
+  <title>🔀 캠페인 종료 후 자동 전환 시스템</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
-    body { font-family: sans-serif; padding: 2rem; background: #f3f4f6; color: #1f2937; }
-    h1 { color: #0f172a; text-align: center; }
-    input, select {
-      width: 100%;
+    body { font-family: sans-serif; background: #f0f9ff; padding: 2rem; color: #1f2937; }
+    h1 { color: #0284c7; text-align: center; }
+    label, select {
+      display: block;
+      margin: 1rem 0 0.3rem;
       max-width: 500px;
+    }
+    select {
       padding: 0.6rem;
-      margin: 1rem 0;
+      width: 100%;
     }
     button {
+      margin-top: 1.5rem;
       padding: 0.75rem 1.5rem;
       background: #0ea5e9;
       color: white;
@@ -21,64 +25,46 @@
       border-radius: 6px;
       cursor: pointer;
     }
-    .result {
+    .output {
       margin-top: 2rem;
       background: white;
-      padding: 1.5rem;
+      padding: 1.2rem;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
   </style>
 </head>
 <body>
-  <h1>🔁 반복 캠페인 자동 시나리오 생성</h1>
-  <label>캠페인 대상 기능</label>
-  <select id="feature">
+  <h1>🔀 반복 캠페인 종료 후 자동 전환 설정</h1>
+
+  <label>종료될 캠페인</label>
+  <select id="source">
     <option value="contract">계약 리마인더</option>
-    <option value="roi">ROI 리포트 전송</option>
-    <option value="ir">IR 제출 유도</option>
-    <option value="translate">다국어 번역 안내</option>
+    <option value="roi">ROI 분석 반복 캠페인</option>
+    <option value="ir">IR 보고서 캠페인</option>
   </select>
 
-  <label>반복 주기</label>
-  <select id="interval">
-    <option value="7">7일 마다</option>
-    <option value="14">2주 간격</option>
-    <option value="30">월 1회</option>
+  <label>다음 자동 전환 캠페인</label>
+  <select id="target">
+    <option value="upgrade">기능 업그레이드 제안</option>
+    <option value="feedback">사용자 피드백 수집</option>
+    <option value="coupon">할인 쿠폰 발송</option>
   </select>
 
-  <label>최대 반복 횟수</label>
-  <input id="limit" type="number" placeholder="예: 3" />
+  <button onclick="link()">자동 전환 설정</button>
 
-  <button onclick="build()">시나리오 생성</button>
-
-  <div class="result" id="output" style="display:none;"></div>
+  <div id="output" class="output" style="display:none;"></div>
 
 <script>
-  function build() {
-    const feature = document.getElementById("feature").value;
-    const interval = document.getElementById("interval").value;
-    const limit = document.getElementById("limit").value;
+  function link() {
+    const source = document.getElementById("source").value;
+    const target = document.getElementById("target").value;
 
-    let desc = "";
-    if (feature === "contract") {
-      desc = "계약 진행 상태에 따라 주기적으로 전자서명 안내 메일을 전송합니다.";
-    } else if (feature === "roi") {
-      desc = "ROI 수익 분석 보고서를 정기적으로 전송합니다.";
-    } else if (feature === "ir") {
-      desc = "IR 리포트 제출 독려 메일을 반복 전송합니다.";
-    } else if (feature === "translate") {
-      desc = "다국어 번역기 사용 안내를 반복적으로 전송합니다.";
-    }
+    const desc = `🔁 <b>${source.toUpperCase()}</b> 캠페인 종료 시 → <b>${target.toUpperCase()}</b> 캠페인으로 자동 전환 설정이 완료되었습니다.`;
 
-    const summary = `
-      <p><b>캠페인 구성:</b> ${desc}</p>
-      <p><b>반복 주기:</b> ${interval}일 마다</p>
-      <p><b>최대 반복 횟수:</b> ${limit}회</p>
-    `;
-
-    document.getElementById("output").innerHTML = summary;
-    document.getElementById("output").style.display = "block";
+    const out = document.getElementById("output");
+    out.innerHTML = desc;
+    out.style.display = "block";
   }
 </script>
 </body>
