--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>🔀 캠페인 종료 후 자동 전환 시스템</title>
+  <meta charset="UTF-8">
+  <title>🧠 마케팅 자동화 흐름 설계 시뮬레이터</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
-    body { font-family: sans-serif; background: #f0f9ff; padding: 2rem; color: #1f2937; }
-    h1 { color: #0284c7; text-align: center; }
+    body { font-family: sans-serif; background: #f0fdf4; padding: 2rem; color: #1f2937; }
+    h1 { text-align: center; color: #059669; }
     label, select {
       display: block;
       margin: 1rem 0 0.3rem;
-      max-width: 500px;
+      max-width: 600px;
     }
     select {
       padding: 0.6rem;
@@ -19,7 +19,7 @@
     button {
       margin-top: 1.5rem;
       padding: 0.75rem 1.5rem;
-      background: #0ea5e9;
+      background: #10b981;
       color: white;
       border: none;
       border-radius: 6px;
@@ -28,42 +28,71 @@
     .output {
       margin-top: 2rem;
       background: white;
-      padding: 1.2rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
     }
   </style>
 </head>
 <body>
-  <h1>🔀 반복 캠페인 종료 후 자동 전환 설정</h1>
+  <h1>🧠 AgriNexus 마케팅 자동 흐름 설계 시뮬레이터</h1>
 
-  <label>종료될 캠페인</label>
-  <select id="source">
-    <option value="contract">계약 리마인더</option>
-    <option value="roi">ROI 분석 반복 캠페인</option>
-    <option value="ir">IR 보고서 캠페인</option>
+  <label>유입 채널</label>
+  <select id="channel">
+    <option value="email">이메일</option>
+    <option value="ads">광고 클릭</option>
+    <option value="referral">추천 링크</option>
+    <option value="organic">검색 엔진</option>
   </select>
 
-  <label>다음 자동 전환 캠페인</label>
-  <select id="target">
-    <option value="upgrade">기능 업그레이드 제안</option>
-    <option value="feedback">사용자 피드백 수집</option>
-    <option value="coupon">할인 쿠폰 발송</option>
+  <label>고객 등급</label>
+  <select id="tier">
+    <option value="bronze">Bronze</option>
+    <option value="silver">Silver</option>
+    <option value="gold">Gold</option>
+    <option value="vip">VIP</option>
   </select>
 
-  <button onclick="link()">자동 전환 설정</button>
+  <label>첫 사용 기능</label>
+  <select id="entry">
+    <option value="contract">계약서 생성</option>
+    <option value="forecast">수익 분석</option>
+    <option value="translate">번역기 사용</option>
+    <option value="roi">ROI 예측</option>
+  </select>
+
+  <button onclick="simulate()">자동 흐름 생성</button>
 
   <div id="output" class="output" style="display:none;"></div>
 
 <script>
-  function link() {
-    const source = document.getElementById("source").value;
-    const target = document.getElementById("target").value;
+  function simulate() {
+    const channel = document.getElementById("channel").value;
+    const tier = document.getElementById("tier").value;
+    const entry = document.getElementById("entry").value;
 
-    const desc = `🔁 <b>${source.toUpperCase()}</b> 캠페인 종료 시 → <b>${target.toUpperCase()}</b> 캠페인으로 자동 전환 설정이 완료되었습니다.`;
+    let flow = `<p><b>🧭 유입 채널:</b> ${channel}</p>`;
+    flow += `<p><b>👥 고객 등급:</b> ${tier.toUpperCase()}</p>`;
+    flow += `<p><b>▶ 첫 사용 기능:</b> ${entry}</p>`;
+
+    if (entry === "contract") {
+      flow += `<p>📩 <b>Step 1:</b> 계약서 작성 후 이메일 전송 캠페인</p>`;
+      flow += `<p>📈 <b>Step 2:</b> ROI 예측 연결 ➤ 업그레이드 CTA 표시</p>`;
+    } else if (entry === "forecast") {
+      flow += `<p>📬 <b>Step 1:</b> 예측 리포트 전송 후 계약 유도</p>`;
+      flow += `<p>🔁 <b>Step 2:</b> 반복 ROI 리포트 자동 예약</p>`;
+    } else if (entry === "translate") {
+      flow += `<p>🌐 <b>Step 1:</b> 글로벌 거래 안내 리마인더 전송</p>`;
+      flow += `<p>📩 <b>Step 2:</b> IR 리포트 제출 자동 유도</p>`;
+    } else if (entry === "roi") {
+      flow += `<p>📄 <b>Step 1:</b> PDF 저장 안내</p>`;
+      flow += `<p>💰 <b>Step 2:</b> 투자자용 IR 자동 전환 제안</p>`;
+    }
+
+    flow += `<p>✅ <b>Step 3:</b> 행동 기반 리타겟팅 캠페인 자동 등록</p>`;
 
     const out = document.getElementById("output");
-    out.innerHTML = desc;
+    out.innerHTML = flow;
     out.style.display = "block";
   }
 </script>
